<resources>
    <string name="app_name">Salle Library</string>
    <string name="Salle_Library">Salle Library</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="signup_title">SIGN UP</string>
    <string name="login_title">LOG IN</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="titulo_libro">Titulo del libro</string>
    <string name="subtitulo_libro">Subtitulo del libro</string>
    <string name="autores_libro">Autor/es del libro</string>
    <string name="editorial_libro">Editorial del libro</string>
    <string name="fecha_libro">00/00/000</string>
    <string name="precio_libro">00,00€</string>
    <string name="descripcion_libro">Descripcion del libro posible</string>
    <string name="title_activity_books_list">BooksListActivity</string>
    <string name="book_id">id</string>
    <string name="book_title">title</string>
    <string name="book_subtitle">subtitle</string>
    <string name="book_description">description</string>
    <string name="book_publisher">publisher</string>
    <string name="book_authors">authors</string>
    <string name="book_price">list_price</string>
    <string name="book_image">image</string>
    <string name="book_date">published_date</string>
    <string name="search_action">search_action</string>
    <string name="datos_ok">¡Datos correctos!</string>
    <string name="usuario_intent">usuario</string>
    <string name="vacio"></string>
    <string name="blanco"> </string>
    <string name="shared_name">usersInfo</string>
    <string name="usuario_no_existe">¡No existe este usuario!</string>
    <string name="usuario_ya_existe">¡Este usuario ya existe!</string>
    <string name="contraseña_incorrecta">¡Contraseña incorrecta!</string>
    <string name="usuario_vacio">¡El campo usuario no puede estar vacío!</string>
    <string name="contraseña_vacia">¡El campo contraseña no puede estar vacío!</string>
    <string name="nombre_vacio">¡El campo nombre no puede estar vacío!</string>
    <string name="apellido_vacio">¡El campo apellido no puede estar vacío!</string>
    <string name="usuario_creado">¡Usuario creado!</string>
    <string name="libro_añadido">¡Libro añadido a favoritos!</string>
    <string name="libro_quitado">¡Libro quitado de favoritos!</string>
    <string name="book">book</string>
    <string name="fav_action">fav_action</string>
    <string name="favoritos">favoritos</string>

</resources>
