<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_item">

    <ImageView
        android:layout_width="@dimen/image_item_width"
        android:layout_height="@dimen/image_item_height"
        android:id="@+id/imagen_book_list"
        android:background="@color/colorPrimary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/start_margin_data_item">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_libro"
            android:id="@+id/titulo_book_list"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitulo_libro"
            android:id="@+id/subtitulo_book_list"
            android:layout_below="@id/titulo_book_list"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autores_libro"
            android:id="@+id/autores_book_list"
            android:layout_below="@id/subtitulo_book_list"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editorial_libro"
            android:id="@+id/editorial_book_list"
            android:layout_below="@id/autores_book_list"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_libro"
            android:id="@+id/fecha_book_list"
            android:layout_below="@id/editorial_book_list"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio_libro"
            android:id="@+id/precio_book_list"
            android:layout_below="@id/editorial_book_list"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/descripcion_libro"
            android:id="@+id/descripcion_book_list"
            android:layout_below="@id/fecha_book_list"/>
    </RelativeLayout>
</LinearLayout>